# sales-copilot

./: .editorconfig  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-07-phase-1-skeleton.md  2026-04-08-phase-2-firebase-auth.md
docs/superpowers/specs/: 2026-04-07-sales-copilot-design.md  2026-04-08-phase-2-firebase-auth-design.md
services/gateway/: Dockerfile  pyproject.toml
services/gateway/src/sales_copilot_gateway/: __init__.py  auth.py  main.py  protocol.py  session.py  suggestions.py
services/gateway/tests/: test_auth.py  test_health.py  test_protocol.py  test_session.py  test_smoke.py  test_suggestions.py  test_ws_endpoint.py
services/web/: Dockerfile  cloudbuild.yaml  next.config.ts  package-lock.json  package.json  tsconfig.json
services/web/src/app/: globals.css  layout.tsx  page.tsx
services/web/src/components/: AuthControls.tsx  SessionPanel.test.tsx  SessionPanel.tsx
services/web/src/hooks/: useAuth.ts
services/web/src/lib/: audioCapture.test.ts  audioCapture.ts  firebaseClient.ts  protocol.ts  wsClient.test.ts  wsClient.ts
